--- a/app/views/vfw/sales_items/buy.html.slim
+++ b/app/views/vfw/sales_items/buy.html.slim
@@ -35,4 +35,4 @@
           = f.label :cases
           = f.number_field :cases
 
-    = link_to "Cancel", index_path(@sales_item), class:'cancel-button'
+    = link_to "Cancel", sales_items_path, class:'cancel-button'
