--- a/app/views/vfw/sales_items/show.html.slim
+++ b/app/views/vfw/sales_items/show.html.slim
@@ -17,4 +17,4 @@
 
   => link_to 'Edit', edit_sales_item_path(@sales_item)
   '|
-  =< link_to 'Back', index_path(@sales_item)
+  =< link_to 'Back', sales_items_path
