--- a/app/views/layouts/_menubar.html.slim
+++ b/app/views/layouts/_menubar.html.slim
@@ -39,6 +39,8 @@
           = link_to "About", about_about_path, class:"w3-bar-item w3-button gbtn" 
           - if current_user.is_super?
             = link_to "Users", users_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "VFW", vfw_index_path, class:"w3-bar-item w3-button"
+
       .w3-right
         .w3-right
           - flash.each do |name, msg|
