--- a/app/views/vfw/sales_items/_form_beer.html.slim
+++ b/app/views/vfw/sales_items/_form_beer.html.slim
@@ -1,4 +1,4 @@
-= form_for @sales_item do |f|
+= form_for @sales_item, url: sales_item_path(@sales_item) do |f|
   - if @sales_item.errors.any?
     #error_explanation
       h2 = "#{pluralize(@sales_item.errors.count, "error")} prohibited this sales_item from being saved:"
@@ -43,3 +43,4 @@
       = f.label :bottles_2
       = f.text_field :bottles_2
   .actions = f.submit
+p = @sales_item.inspect
