--- a/app/views/welcome/book.html.slim
+++ b/app/views/welcome/book.html.slim
@@ -17,24 +17,25 @@
         label Last Acct Update
         span = Time.parse(Rails.application.config.x.acct_updated).localtime
     p = session_inspect
-    p= Current.user
-    p huh
-
+   
 
 
   .w3-third.w3-padding.min-height[style="background-color:#ffffbb"]
     h3 Home Sidebar Links
     .w3-card-4.w3-bar-block
-      / = link_to "Bank Statements", bank_statements_path, class:"w3-bar-item w3-button gbtn" 
-      / = link_to "Bank(OFX) Trans", latest_ofxes_path, class:"w3-bar-item w3-button gbtn" 
-      / = link_to "Checking Balance", checking_balance_reports_path, class:"w3-bar-item w3-button gbtn" 
-      / = link_to "Reports", reports_path, class:"w3-bar-item w3-button gbtn" 
-      / = link_to "Deposits",weekly_deposits_path, class:"w3-bar-item w3-button gbtn" 
-      / = link_to "Sales Items/Inventory",sales_items_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Bank Statements", bank_statements_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Bank(OFX) Trans", latest_ofxes_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Checking Balance", checking_balance_reports_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Reports", reports_path, class:"w3-bar-item w3-button gbtn" 
 
-      / = link_to "Entry Search",entries_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Entry Search",entries_filter_index_path, class:"w3-bar-item w3-button gbtn" 
       / = link_to "Current Assets Summary",welcome_summary_path, class:"w3-bar-item w3-button gbtn" 
       / = link_to "About", about_about_path, class:"w3-bar-item w3-button gbtn"
-      / - if current_user.is_super?
-      /   = link_to "Users", users_path, class:"w3-bar-item w3-button gbtn" 
+      - if current_user.is_super?
+        = link_to "Users", users_path, class:"w3-bar-item w3-button gbtn" 
 
+      strong VFW
+      = link_to "Deposits",weekly_deposits_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Sales Items/Inventory",sales_items_path, class:"w3-bar-item w3-button gbtn" 
+
+ 
