Book Setup and move VFW to namespace instead of scope

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -65,7 +65,7 @@
 
     br
 
-    = link_to 'New Book', new_book_path, class:'blue-link-button round'
+    = link_to 'New Book Setup', books_setup_index_path, class:'blue-link-button round'
 
 
 
