--- a/app/views/vfw/audit/index.html.slim
+++ b/app/views/vfw/audit/index.html.slim
@@ -8,11 +8,11 @@
       .w3-card-2.w3-bar-block.w70p
         .strong.indent VFW Reports
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->rangePicker#selectAuditConfig " data-url="#{edit_config_vfw_index_path}"] Edit Audit Configuration 
+          button.lite-goldey.w100[data-action="click->rangePicker#selectAuditConfig " data-url="#{edit_config_vfw_audit_index_path}"] Edit Audit Configuration 
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->rangePicker#selectAuditPDF " data-url="#{trustee_audit_vfw_index_path}"] Trustee Audit PDF
+          button.lite-goldey.w100[data-action="click->rangePicker#selectAuditPDF " data-url="#{trustee_audit_vfw_audit_index_path}"] Trustee Audit PDF
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->rangePicker#selectAuditHTML " data-url="#{audit_vfw_index_path}"] Trustee Audit HTML
+          button.lite-goldey.w100[data-action="click->rangePicker#selectAuditHTML " data-url="#{audit_vfw_audit_index_path}"] Trustee Audit HTML
 
     .w3-col.s6
 
@@ -20,12 +20,12 @@
       .w3-card-2.w3-bar-block.w70p
         .strong.indent VFW Engine
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->rangePicker#selectButtonURL" data-url="#{weekly_deposits_path}"] Weekly Sales/Donations/Deposits
+          button.lite-goldey.w100[data-action="click->rangePicker#selectButtonURL" data-url="#{weekly_vfw_deposits_path}"] Weekly Sales/Donations/Deposits
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->rangePicker#selectButtonURL" data-url="#{deposits_path}"] Deposits List
+          button.lite-goldey.w100[data-action="click->rangePicker#selectButtonURL" data-url="#{vfw_deposits_path}"] Deposits List
 
         .w3-bar-item
-          button.lite-goldey.w100[data-action="click->rangePicker#selectButtonURL" data-url="#{sales_items_path}"] Sales Items/Inventory
+          button.lite-goldey.w100[data-action="click->rangePicker#selectButtonURL" data-url="#{vfw_sales_items_path}"] Sales Items/Inventory
 
 
 
