--- a/app/views/vfw/deposits/edit.html.slim
+++ b/app/views/vfw/deposits/edit.html.slim
@@ -1,4 +1,4 @@
 .w3-container.w3-white.min-height
   == render 'form'
 
-  = link_to "Cancel", weekly_deposits_path, class:'cancel-button'
+  = link_to "Cancel", weekly_vfw_deposits_path, class:'cancel-button'
