--- a/app/views/vfw/deposits/month_summary.html.slim
+++ b/app/views/vfw/deposits/month_summary.html.slim
@@ -1,9 +1,9 @@
 .w3-container.w3-white.min-height
   .w3-row-padding
     .show-links.s12.w3-col.noprint
-      = link_to 'Weekly', weekly_deposits_path, class: "button bbutton"
+      = link_to 'Weekly', weekly_vfw_deposits_path, class: "button bbutton"
       |&nbsp;&nbsp;
-      = link_to 'ShowAll', deposits_path, class: "button bbutton"
+      = link_to 'ShowAll', vfw_deposits_path, class: "button bbutton"
       / = link_to 'PDF', deposit_path(@deposit,format: :pdf)
     / h6.strong Deposit Summary
     / - else
