--- a/app/views/vfw/sales_items/pos_download.html.slim
+++ b/app/views/vfw/sales_items/pos_download.html.slim
@@ -2,7 +2,7 @@
 
   .w3-row-padding
     p Pick a menu-items-detail.cvs and inventory_details files from your downloads
-    = form_with url: '/sales_items/downloaded', method: :patch do |f|
+    = form_with url: downloaded_vfw_sales_items_path, method: :patch do |f|
 
       .s6.w3-col
         .field
