--- a/app/views/welcome/book.html.slim
+++ b/app/views/welcome/book.html.slim
@@ -35,7 +35,9 @@
         = link_to "Users", users_path, class:"w3-bar-item w3-button gbtn" 
 
       strong VFW
-      = link_to "Deposits",weekly_deposits_path, class:"w3-bar-item w3-button gbtn" 
-      = link_to "Sales Items/Inventory",sales_items_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Deposits",weekly_vfw_deposits_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Sales Items/Inventory",vfw_sales_items_path, class:"w3-bar-item w3-button gbtn" 
+      = link_to "Menu","/vfw", class:"w3-bar-item w3-button gbtn" 
+
 
  
