--- a/app/views/layouts/_menubar.html.slim
+++ b/app/views/layouts/_menubar.html.slim
@@ -33,13 +33,13 @@
           = link_to "Bank(OFX) Trans", latest_ofxes_path, class:"w3-bar-item w3-button gbtn" 
           = link_to "Checking Balance", checking_balance_reports_path, class:"w3-bar-item w3-button gbtn" 
           = link_to "Reports", reports_path, class:"w3-bar-item w3-button gbtn" 
-          / = link_to "Deposits",weekly_deposits_path, class:"w3-bar-item w3-button  gbtn" 
+          / = link_to "Deposits",weekly_vfw_deposits_path, class:"w3-bar-item w3-button  gbtn" 
           / = link_to "Sales Items/Inventory",sales_items_path, class:"w3-bar-item w3-button gbtn" 
           = link_to "Entry Search",entries_filter_index_path, class:"w3-bar-item w3-button gbtn" 
           = link_to "About", about_about_path, class:"w3-bar-item w3-button gbtn" 
           - if current_user.is_super?
             = link_to "Users", users_path, class:"w3-bar-item w3-button gbtn" 
-      = link_to "VFW", vfw_index_path, class:"w3-bar-item w3-button"
+      = link_to "VFW", "/vfw", class:"w3-bar-item w3-button"
 
       .w3-right
         .w3-right
