--- a/app/views/vfw/audit/edit_config.html.slim
+++ b/app/views/vfw/audit/edit_config.html.slim
@@ -2,12 +2,12 @@
   h4.strong 
     |Editing11 Audit Report Configuration 
     span.inheader
-      button.green=> link_to 'Cancel/Show', vfw_index_path,class:'cancel-button'
+      button.green=> link_to 'Cancel/Show', vfw_audit_index_path,class:'cancel-button'
 
   .w3-row
     .w3-col.s6
       .callout.alert.strong.z1 
         h5 Cancel if you don't know what you are doing!
-      = form_with(url: update_config_vfw_index_path,method: 'patch')
+      = form_with(url: update_config_vfw_audit_index_path,method: 'patch')
         .box= submit_tag
         .box= text_area_tag :yaml,@vfwcashconfig,rows:30,cols:100
