--- a/app/views/vfw/deposits/index.html.slim
+++ b/app/views/vfw/deposits/index.html.slim
@@ -31,16 +31,16 @@
           td.tright = deposit.total_deposit
           td.tright = deposit.cash_out
           td.actions 
-            = link_to deposit_path(deposit) do
+            = link_to vfw_deposit_path(deposit) do
               i class="fas fa-eye blue-link"
-            = link_to edit_deposit_path(deposit) do
+            = link_to edit_vfw_deposit_path(deposit) do
               i class="fas fa-edit blue-link"
-            = link_to deposit_path(deposit), data: { confirm: 'Are you sure? ' }, method: :delete do
+            = link_to vfw_deposit_path(deposit), data: { confirm: 'Are you sure? ' }, method: :delete do
               i class="fas fa-trash w3-text-red"
             / = link_to 'Show', deposit, class:'blue-link'
-            / = link_to 'Edit', edit_deposit_path(deposit), class:'blue-link'
+            / = link_to 'Edit', edit_vfw_deposit_path(deposit), class:'blue-link'
             / = link_to 'Destroy', deposit, data: { confirm: 'Are you sure?' }, method: :delete, class:'blue-link'
 
   br
 
-  = link_to 'New Deposit', new_deposit_path
+  = link_to 'New Deposit', new_vfw_deposit_path
