--- a/app/views/vfw/deposits/weekly.html.slim
+++ b/app/views/vfw/deposits/weekly.html.slim
@@ -4,11 +4,11 @@
       |Last 5 weekly deposits
     .m10.w3-col
       span.w3-black.w3-padding-small
-        = link_to "List Deposits", deposits_path, class: "gold-link-button  w3-text-black"
-        = link_to "Month Summary", month_summary_deposits_path, class: "gold-link-button  w3-text-black"
-        = link_to "Last Month Summary", month_summary_deposits_path(date:(Date.today - 1.month)), class: "gold-link-button  w3-text-black"
-      / = link_to "Beer Inventory", beer_edit_deposits_path, class: "lime-link-button"
-      / = link_to "Liquor Inventory", liquor_edit_deposits_path, class: "lime-link-button"
+        = link_to "List Deposits", vfw_deposits_path, class: "gold-link-button  w3-text-black"
+        = link_to "Month Summary", month_summary_vfw_deposits_path, class: "gold-link-button  w3-text-black"
+        = link_to "Last Month Summary", month_summary_vfw_deposits_path(date:(Date.today - 1.month)), class: "gold-link-button  w3-text-black"
+      / = link_to "Beer Inventory", beer_edit_vfw_deposits_path, class: "lime-link-button"
+      / = link_to "Liquor Inventory", liquor_edit_vfw_deposits_path, class: "lime-link-button"
 
       / = link_to "Sales Items", sales_items_path, class: "lime-link-button"
 
@@ -26,8 +26,8 @@
           - color = deposit.sales_revenues.count > 0 ? 'lime-link-button' : 'grey-link-button'
 
           td[class="#{color}"] 
-            = link_to 'Sales Revenue',edit_deposit_path(deposit)
+            = link_to 'Sales Revenue',edit_vfw_deposit_path(deposit)
           - color = deposit.other_revenues.count > 0 ?  'lime-link-button' : 'grey-link-button'
-          td[class="#{color}"] = link_to "Non-Sales Revenue",edit_other_deposit_path(deposit)
-          td[class="#{color}"] = link_to "Summary",deposit_path(deposit)
+          td[class="#{color}"] = link_to "Non-Sales Revenue",edit_other_vfw_deposit_path(deposit)
+          td[class="#{color}"] = link_to "Summary",vfw_deposit_path(deposit)
   h6.strong Go to List Deposits for Deposit older the 5 weeks
