--- a/app/views/vfw/sales_items/index.html.slim
+++ b/app/views/vfw/sales_items/index.html.slim
@@ -2,17 +2,17 @@
   .w3-row-padding.noprint
     h3.w3-col.s3 = "Listing #{request.path.gsub('/',' ').gsub('_',' ').split.map { |x| x.capitalize }.join(" ")} "
     .w3-col.s9.w3-padding 
-      = link_to "Sales Items",sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Sales Items",vfw_sales_items_path, class:'lime-link-button round w3-padding' 
 
-      = link_to "Liquor",liquor_sales_items_path, class:'lime-link-button round w3-padding' 
-      = link_to "Beer",beer_sales_items_path, class:'lime-link-button round w3-padding' 
-      = link_to "Wine",wine_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Liquor",liquor_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Beer",beer_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Wine",wine_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
 
-      = link_to "Beverage",beverage_sales_items_path, class:'lime-link-button round w3-padding' 
-      = link_to "Food",food_sales_items_path, class:'lime-link-button round w3-padding' 
-      = link_to "Liquor Inv",liquor_inventory_sales_items_path, class:'lime-link-button round w3-padding' 
-      = link_to "Beer Inv",beer_inventory_sales_items_path, class:'lime-link-button round w3-padding' 
-      = link_to "POS Update",pos_download_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Beverage",beverage_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Food",food_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Liquor Inv",liquor_inventory_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "Beer Inv",beer_inventory_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
+      = link_to "POS Update",pos_download_vfw_sales_items_path, class:'lime-link-button round w3-padding' 
 
 
   - tcost = 0
@@ -62,9 +62,9 @@
           td = sales_item.bottles_2
           td = sales_item.percent
           td 
-            = link_to icon('fas fa-eye'),  sales_item_path(sales_item), title: 'Show it', class: 'btn-icon  w3-text-blue mr-4'
-            = link_to icon('fas fa-edit'), edit_sales_item_path(sales_item), title: 'Edit it', class: 'btn-icon warning mr-4 w3-text-orange'
-            = link_to icon('fas fa-trash'),  sales_item_path(sales_item), title: 'Destroy it', class: ' btn-icon mr-4 w3-text-red', method: :delete, data: { confirm: 'Are you sure?', remote: true }
-            = link_to icon('far fa-shopping-cart'),buy_sales_item_path(sales_item),class: 'btn-icon  w3-text-blue mr-4'
+            = link_to icon('fas fa-eye'),  vfw_sales_item_path(sales_item), title: 'Show it', class: 'btn-icon  w3-text-blue mr-4'
+            = link_to icon('fas fa-edit'), edit_vfw_sales_item_path(sales_item), title: 'Edit it', class: 'btn-icon warning mr-4 w3-text-orange'
+            = link_to icon('fas fa-trash'),  vfw_sales_item_path(sales_item), title: 'Destroy it', class: ' btn-icon mr-4 w3-text-red', method: :delete, data: { confirm: 'Are you sure?', remote: true }
+            = link_to icon('far fa-shopping-cart'),buy_vfw_sales_item_path(sales_item),class: 'btn-icon  w3-text-blue mr-4'
   p.strong = "Total Cost/Inventory Value: #{tcost.round(2)}"
 
