--- a/app/views/welcome/book.html.slim
+++ b/app/views/welcome/book.html.slim
@@ -16,6 +16,14 @@
       .field
         label Last Acct Update
         span = Time.parse(Rails.application.config.x.acct_updated).localtime
+
+    hr
+    <script type="text/javascript" src="https://www.brainyquote.com/link/quotebr.js"></script>
+    <small><i>
+      <a href="https://www.brainyquote.com/quotes_of_the_day.html" target="_blank" rel="nofollow">more Quotes</a>
+    </i>
+    </small>
+
     p = session_inspect
    
 
