sales_item type vfw path

--- a/app/views/vfw/edit_config.html.slim
+++ b/app/views/vfw/edit_config.html.slim
@@ -2,7 +2,7 @@
   h4.strong 
     |Editing11 Audit Report Configuration 
     span.inheader
-      button.green=> link_to 'Cancel/Show', vfw_index_path,class:'cancel-button'
+      button.green=> link_to 'Cancel/Show', "/vfw",class:'cancel-button'
 
   .w3-row
     .w3-col.s6
