--- a/app/views/vfw/sales_items/edit.html.slim
+++ b/app/views/vfw/sales_items/edit.html.slim
@@ -8,7 +8,7 @@
   -else
     == render 'form'
 
-  => link_to 'Show', sales_item_path(@sales_item)
+  => link_to 'Show', vfw_sales_item_path(@sales_item)
   '|
-  =< link_to 'Back', sales_items_path
+  =< link_to 'Back', vfw_sales_items_path
 
