--- a/app/views/vfw/sales_items/show.html.slim
+++ b/app/views/vfw/sales_items/show.html.slim
@@ -15,6 +15,6 @@
     = show_table_row('Bottles 2:',@sales_item.bottles_2)
     = show_table_row('Percent:',@sales_item.percent)
 
-  => link_to 'Edit', edit_sales_item_path(@sales_item)
+  => link_to 'Edit', edit_vfw_sales_item_path(@sales_item)
   '|
-  =< link_to 'Back', sales_items_path
+  =< link_to 'Back', vfw_sales_items_path
