--- a/app/views/ofxes/show.html.slim
+++ b/app/views/ofxes/show.html.slim
@@ -1,6 +1,6 @@
 .w3-container.w3-white.min-height
   .w3-row-padding-x
-    #ledger.cell[data-controller="ofx" data-controller-entryID="" data-controller-fitID=""]
+    #ledger.cell[data-controller="ofx"]
       / #btModal.reveal data-reveal="" 
       /   p If your recongnize the Entry as a reapeating Entry, select a matching name in the folloing pulldown and click the Duplicate Match button and it will duplicate that transaction with the information from the bank statement.
       /   button.close-button aria-label=("Close modal") data-close="" type="button" 
@@ -19,7 +19,7 @@
           .w3-container
             p If your recongnize the Entry as a reapeating Entry, search for a matching name in the following search field and click the Duplicate Match button and it will duplicate a new Entry with the information from the bank statement. You can then save the Entry if it validates. You can also Cancel the Entry if you picked the wrong match.
             div.w3-left[data-controller="autocomplete" 
-               data-autocomplete-url="/entries/entry_search" data-autocomplete-min-length="2"]
+               data-autocomplete-url="/entries/auto_search" data-autocomplete-min-length="2"]
                input[type="text" data-target="autocomplete.input" placeholder="Entry Description Search" data-action="change->ofx#showSearched" style="width:300px;margin-right:8px;"]
                input[type="hidden" name="entry_id" data-target="autocomplete.hidden ofx.hidden" ]
                input[type="hidden" name="fit_id" data-target="ofx.fitID" ]
