--- a/app/views/entries/actions/search_filter.html.slim
+++ b/app/views/entries/actions/search_filter.html.slim
@@ -5,8 +5,9 @@
       = form_with( url:'/entries/filtered',method: :get, html: {data: { type: "html", action: "ajax:success->entrySearch#onPostSuccess",target:'entrySearch.form' } }) do |form|
         .w3-row-padding
           .w3-col.m7
-            p You can search for entries descriptions and filter search by the radion buttons. You can also search for and Entry number starting with a number or search for a split amount (in pennies!).
+            p You can search for entries descriptions and filter search by the radio buttons options. You can also search for a Entry number or search for a Split amount (in pennies!). Entries searches will defaut to the last match. Check the  <strong>Show All</strong> check box to all all matches for basic search without options.
           .w3-col.m5
+            .strong Options
             div
               = form.radio_button(:how, "any")
               span.w3-margin By matching *any* word or words in the search field
@@ -16,11 +17,17 @@
             div
               = form.radio_button(:how, "match")
               span.w3-margin By matching a phrase or parts of a description
+            div
+              = form.radio_button(:how, 'nil')
+              span.w3-margin Clear Options
+
 
         label.strong Search Field
 
         = form.text_field :words,class:'w30p'
         span.strong.w3-margin &nbsp;&nbsp;
+        = form.check_box(:show_all)
+        span.w3-margin Show All
         button = form.submit "Search Entries"
         button = form.submit "Search Entry Number"
         button = form.submit "Search Split Amount"
