last_tran and favicon

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,6 +1,7 @@
  .w3-bar.malty 
   .w3-row
     .w3-col.m3
+      = image_tag("favicon.ico",height:32)
       span.indent.small-caps.strong RBooks
     .w3-col.m6
       .w3-center 
